feat: 회원가입 화면 ui 변경으로 인한 필요 목록 조회 api